# fair-dfl-mtl

./: .gitignore  METHODS.md  README.md  RESULTS_REVISION_PLAN.md  pyproject.toml  reproduce.sh
aggregate/: aggregate_hc_main.py  build_individual_table.py  build_md_d3_tables.py  md_d2_tables.py
data/: .gitignore  README.md  prepare_data.py
experiments/: run_hc_group.py  run_hc_individual.py  run_md_d2.py  run_md_d3.py
fdfl_harness/: __init__.py  configs.py  hc_v2.py  md_imbalance.py  runner.py
results_reference/healthcare/: SUMMARY.md  main_table_per_method.csv
results_reference/healthcare_individual/: individual_table_per_method.csv
results_reference/md_d2/: v2_table_mad_a2.0_imb0.0.csv  v2_table_mad_a2.0_imb0.2.csv  v2_table_mad_a2.0_imb0.4.csv  v2_table_mad_a2.0_imb0.6.csv  v2_table_mad_a2.0_imb0.8.csv
results_reference/md_d3/: v2_d3_table_mad_a2.0_imb0.0.csv  v2_d3_table_mad_a2.0_imb0.2.csv  v2_d3_table_mad_a2.0_imb0.4.csv  v2_d3_table_mad_a2.0_imb0.6.csv  v2_d3_table_mad_a2.0_imb0.8.csv
wheels/: fair_dfl_moo-0.1.0-py3-none-any.whl
